--- a/package.json
+++ b/package.json
@@ -88,11 +88,11 @@
     "nodemon": "^1.9.2",
     "null-loader": "^0.1.1",
     "nyc": "^6.4.4",
+    "peer-deps-externals-webpack-plugin": "^1.0.2",
     "postcss-cssnext": "^2.6.0",
     "postcss-focus": "^1.0.0",
     "postcss-loader": "^0.9.1",
     "postcss-reporter": "^1.3.3",
-    "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^3.0.0-beta.2",
     "redux-ava": "^2.0.0",
